[package]
edition = "2021"
name = "aws-s3-multipart-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
aws-smithy-http = "0.55.3"
tokio = {version = "1.29.0", features = ["macros", "rt-multi-thread"]}
